--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,10 +34,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
+    - name: Set up Go
+      uses: actions/setup-go@v4
       with:
-        version: v1.56.2
+        go-version: '1.21'  # Change to your Go version if needed
+
+    - name: Install dependencies
+      run: go mod tidy
+
+    - name: Install golangci-lint manually
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.56.2
+        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+    - name: Run golangci-lint
+      run: golangci-lint run --timeout=5m
 
   push:
     runs-on: ubuntu-latest
