--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,98 +1,94 @@
-name: CI-go-web-app
+# CICD using GitHub actions
 
+name: CI/CD
+
+# Exclude the workflow to run on changes to the helm chart
 on:
   push:
     branches:
       - main
-    paths:
-      - 'README.md'
+    paths-ignore:
       - 'helm/**'
+      - 'k8s/**'
+      - 'README.md'
 
 jobs:
+
   build:
-    runs-on: ubuntu-latest #vm or container to run the job
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Go-lang-web-app
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.22'
-
-      - name: build
-        run: go build -o go-web-app main.go
-
-      - name: Run tests
-        run: go test ./...
-
-  Code-Quality:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - name: Set up Go 1.22
+      uses: actions/setup-go@v2
       with:
-        go-version: '1.21'  # Change to your Go version if needed
+        go-version: 1.22
 
-    - name: Install dependencies
-      run: go mod tidy
+    - name: Build
+      run: go build -o go-web-app
 
-    - name: Install golangci-lint manually
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.56.2
-        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+    - name: Test
+      run: go test ./...
+
+  code-quality:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Run golangci-lint
-      run: golangci-lint run --timeout=5m
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.56.2
 
   push:
     runs-on: ubuntu-latest
 
+    needs: build
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push actions
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/go-web-app:${{ github.run_id }}
+    - name: Build and Push action
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
 
-  update-helm-chart-with-new-tag:
+  update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
 
     needs: push
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.TOKEN }}
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.TOKEN }}
 
-      - name: update tag in helm charts
-        run: |
-          sed -i 's/tag: .*/tag: "${{ github.run_id }}"/' helm/go-web-app-chart/values.yaml
+    - name: Update tag in Helm chart
+      run: |
+        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
 
-      - name: Commit and push the changes
-        run: |
-          git config --global user.email "chetansk978@gmail.com"
-          git config --global user.name "chetan-patil7"
-          git add helm/go-web-app-chart/values.yaml
-          git commit -m "update tag in helm charts"
-          git push
+    - name: Commit and push changes
+      run: |
+        git config --global user.email "chetansk978@gmail.com"
+        git config --global user.name "chetan-pail7"
+        git add helm/go-web-app-chart/values.yaml
+        git commit -m "Update tag in Helm chart"
+        git push
